# simclass

./: .env.example  .gitignore  README.md  pyproject.toml
configs/: campus_basic.json
src/simclass/: __main__.py  api.py
src/simclass/app/: __init__.py  api.py  config.py  llm_factory.py  main.py  scenario.py
src/simclass/app/web/: app.js  index.html  styles.css
src/simclass/core/: __init__.py  agent.py  behavior.py  bus.py  calendar.py  context.py  controller.py  curriculum.py  directory.py  perception.py  schedule.py  simulation.py  social.py  state.py  supervisor.py  tools.py  world.py
src/simclass/core/llm/: __init__.py  provider.py  responder.py  tooling.py  types.py
src/simclass/domain/: __init__.py  models.py
src/simclass/infra/: __init__.py  env.py  storage.py
src/simclass/infra/llm/: __init__.py  deepseek.py
tests/: test_curriculum.py  test_forgetting.py  test_perception.py  test_schedule.py  test_world.py
